app/styles/component_project-messenger.scss
.messenger.is-minimized, .messenger.is-minimized.advanced {
  height: 50px;
}
.messenger.advanced {
  height: 500px;
  width: 600px;
}
.messenger {
  width: 275px;
  height: 400px;
  position: absolute;
  bottom: 0px;
  right: 5%;
  transition: all .3s;
  box-shadow: 0px 0px 10px rgba(0,0,0,.3);
  background-color: rgba(255,255,255,1);
  .header {
    height: 50px;
    padding: 10px;
    text-align: center;
    border-bottom: 1px solid #fff;
    color: #fefefe;
    background-color: #0098ff;
    .back, .hamburger {
      top: 0px;
      height: 50px;
      position: absolute;
      width: 55px;
      box-sizing: border-box;
      transition: color 0.2s, rotateX .3s;
      // transition: all .2s;
    }
    .back:hover, .hamburger .toggle:hover {
      color: rgba(0, 100, 0, 0.6);
      cursor: pointer;
    }
    .back {
      left: 0px;
      font-size: 25px;
      padding: 7px 10px 10px 10px;
    }
    .hamburger {
      left: 0px;
      .toggle {
        padding: 11px 10px 10px 10px;
        font-size: 24px;
        line-height: 7px;
      }
    }
    .newThreadToggle {
      top: 0px;
      height: 50px;
      position: absolute;
      width: 55px;
      box-sizing: border-box;
      right: 0px;
      padding: 20px 10px 10px 10px;
      font-size: 35px;
      line-height: 7px;
    }
    .newThreadToggle.active {
      font-size: 25px;
      line-height: 2px;
    }
    .newThreadToggle:hover {
      cursor: pointer;
      color: rgba(0, 100, 0, 0.6);
    }
    h3 {
      height: 100%;
    }
    h3:hover {
      cursor: pointer;
    }
  }
  .body {
    height: calc(100% - 50px);
    overflow: hidden;
    width: 100%;
    border-left: 1px solid rgba(0, 136, 255, 0.8);
    border-right: 1px solid rgba(0, 136, 255, 0.8);;
    .body-inner-wrapper {
      width: 200%;
      height: 100%;
    }
    .hamburger-options {
      height: 100%;
      float: left;
      transition: all .3s;
      overflow: hidden;
      box-sizing: border-box;
      .option {
        padding: 10px;
        border-bottom: 1px solid #fff;
        background-color: rgba(0, 136, 255, 0.3);
        transition: all .3s;
        color: rgba(0, 136, 255, 1);
        text-align: center;
      }
      .option:hover, .option.active {
        cursor: pointer;
        background-color: rgba(0, 136, 255, 0.5);
        color: rgba(0, 100, 200, 1);
      }
    }
    .hamburger-options.hide {
      width: 0px;
    }
    .hamburger-options.show {
      width: 170px;
      border-right: 1px solid rgba(0, 136, 255, 0.8);;
    }
    .threads, .messages {
      position: static;
      transition: all .4s;
      width: 50%;
      height: 100%;
      float: left;
    }
    .newThread.hide {
      opacity: 0;
      transform: rotateY(180deg);
      -webkit-transform: rotateY(180deg);
    }
    .newThread.show {
      opacity: 1;
      transform: rotateY(0deg);
      -webkit-transform: rotateY(0deg);
      z-index: 10;
    }
    .newThread.slide-right {
      left: 170px;
      width: calc(100% - 170px);
    }
    .newThread.slide-none {
      left: 0px;
      width: 100%;
    }
    .newThread {
      border-left: 1px solid rgba(0, 136, 255, 0.8);
      position: absolute;
      transition: all .3s;

      input[type="text"] {
        border-top: none;
        border-left: none;
        border-right: none;
        border-bottom: 1px solid rgba(0, 136, 255, 0.3);
        width: 100%;
        font-size: 16px;
        color: rgba(0,100,0,.7);
        padding: 10px;
        box-sizing: border-box;
        float: left;
        height: 47px;
      }
      input[type="submit"] {
        float: left;
        height: 100%;
        width: 100%;
        font-size: 35px;
        color: #fff;
        border: none;
        background-color: rgba(0, 136, 255, 0.6);
        box-sizing: border-box;
        transition: all .2s;
      }
      .submit:hover {
        color: rgba(0, 100, 0, 0.6);
        background-color: #fff;
        cursor: pointer;
      }
    }
    .threads {
      overflow-y: auto;
      background-color: #fff;
      transition: all .3s;
      .thread {
        padding: 10px;
        border-bottom: 1px solid #fff;
        background-color: rgba(0, 136, 255, 0.3);
        transition: all .3s;
        color: rgba(0, 136, 255, 1);
        .name {
          width: calc(100% - 25px);
          float: left;
          .thread-author, .thread-name {
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
          }
          .thread-author {
            font-weight: bold;
            margin-bottom: 4px;
          }
          .thread-name {
          }
        }
        .arrow {
          float: left;
          width: 25px;
          color: #fff;
          font-size: 25px;
          line-height: 50px;
        }
      }
      .thread:hover {
        cursor: pointer;
        background-color: rgba(0, 136, 255, 0.5);
        color: rgba(0, 100, 200, 1);
      }
    }
    .threads.no-flip {
      opacity: 1;
      transform: rotateY(0deg);
      -webkit-transform: rotateY(0deg);
    }
    .threads.flip {
      opacity: 0;
      transform: rotateY(180deg);
      -webkit-transform: rotateY(180deg);
    }
    .threads.show {
      margin-left: 0px;
    }
    .threads.hide {
      margin-left: -50%;//-275px;
    }
    .messages.show {
      left: 0px;
    }
    .messages.hide {
      left: -50%;//275px;
    }
    .messages {
      .messages-body {
        height: calc(100% - 47px);
        overflow-y: auto;
      }
      .newMessage {
        height: 47px;
        box-sizing: border-box;
        width: 100%;
        .name {
          width: calc(100% - 54.5px);
          font-size: 16px;
          color: rgba(0, 100, 0, 0.7);
          border: none;
          padding: 10px;
          box-sizing: border-box;
          float: left;
          height: 47px;
        }
        .submit {
          height: 47px;
          width: 54.5px;
          font-size: 25px;
          color: rgba(0,136,255,1);
          background-color: #fff;;
          box-sizing: border-box;
          transition: all 0.2s;
          border: none;
        }
        .submit:hover {
          color: rgba(0, 100, 0, 0.6);
          background-color: #fff;
          cursor: pointer;
        }
      }
      .row.message {
        padding: 10px;
        width: 100%;
        .col.body {
          border: none;
        }
      }
      .row.message.type-admin {
        border-left: 2px solid rgba(0, 136, 255, 0.8);
        text-align: left;
        color: rgba(0, 136, 255, 1);
      }
      .row.message.type-student {
        border-right: 2px solid rgba(0, 136, 255, 0.8);
        color: rgba(0, 0, 0, 0.8);
        text-align: right;
      }
    }
  }
}

